--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "3.3.4",
-    "jade": ">= 0.25.0",
+    "express": "4.10.7",
+    "jade": "1.8.2",
     "ejs": "0.7.1",
     "mongoose": "2.5.10",
     "shortid": "1.0.6",
