update app.js to work with express 4.x

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "mongoose": "3.8.21",
     "shortid": "1.0.6",
     "MD5": "latest",
-    "connect-auth": "0.6.1"
+    "connect-auth": "0.6.1",
+    "body-parser": "1.10.1",
+    "method-override": "2.3.1",
+    "serve-static": "1.8.0",
+    "errorhandler": "1.3.2"
   },
   "engines": {
     "node": "0.10.x",
